--- a/Win_InvApp/Win_InvApp/Win_InvApp.csproj
+++ b/Win_InvApp/Win_InvApp/Win_InvApp.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileStream.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
