--- a/Win_InvApp/Win_InvApp/App.config
+++ b/Win_InvApp/Win_InvApp/App.config
@@ -11,7 +11,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.14.0" newVersion="1.2.14.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebSocket4Net" publicKeyToken="eb4e154b696bf72a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.14.1.0" newVersion="0.14.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
