--- a/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.oleh.myapplication">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.example.oleh.myapplication.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".DatabaseInvetoryActivity"></activity>
+        <activity android:name=".DatabaseInvetoryActivity" />
+        <activity android:name=".BarcodeScan"></activity>
     </application>
 
 </manifest>
