--- a/Win_InvApp/Win_InvApp/Win_InvApp.csproj
+++ b/Win_InvApp/Win_InvApp/Win_InvApp.csproj
@@ -69,7 +69,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OnBarcode.Barcode.BarcodeScanner">
-      <HintPath>..\..\..\Portfolio 2\InventoryManager\Barcode_App\Paid_software\OnBarcode.Barcode.BarcodeScanner.dll</HintPath>
+      <HintPath>..\..\Barcode_App\Paid_software\OnBarcode.Barcode.BarcodeScanner.dll</HintPath>
     </Reference>
     <Reference Include="CloudBoost, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\cloudboost.2.0.1\lib\net452\CloudBoost.dll</HintPath>
