--- a/Win_InvApp/Win_InvApp/App.config
+++ b/Win_InvApp/Win_InvApp/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Win_InvApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
@@ -19,4 +24,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <Win_InvApp.Properties.Settings>
+      <setting name="Copyright" serializeAs="String">
+        <value>Copyright © 2016 Brandon Bigelow, Cristobal Hall-Ramos, Gabriel Leo, Ole Haruksha</value>
+      </setting>
+      <setting name="CompanyName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProgramName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UserName" serializeAs="String">
+        <value />
+      </setting>
+    </Win_InvApp.Properties.Settings>
+  </applicationSettings>
 </configuration>
