--- a/Android/Android_InvManagement/MyApplication/app/build.gradle
+++ b/Android/Android_InvManagement/MyApplication/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'io.cloudboost:JavaSDK:1.0.7'
 
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
