--- a/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".DatabaseInvetoryActivity" />
-        <activity android:name=".BarcodeScan"></activity>
+        <activity android:name=".BarcodeScan"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
