--- a/Android/Android_InvManagement/MyApplication/app/build.gradle
+++ b/Android/Android_InvManagement/MyApplication/app/build.gradle
@@ -19,11 +19,14 @@ android {
     }
 }
 
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'io.cloudboost:JavaSDK:1.0.7'
+    //Sign in with google
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    //Sign in with facebook
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
 
 }
