--- a/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.example.oleh.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name=".App"
@@ -23,7 +23,15 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".DatabaseInvetoryActivity" />
-        <activity android:name=".BarcodeScan"></activity>
+        <activity android:name=".BarcodeScan" />
+        <activity android:name=".GoogleSignInTest"></activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
