--- a/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -28,16 +28,14 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".DatabaseInvetoryActivity" />
         <activity android:name=".BarcodeScan" />
-        <activity android:name=".GoogleSignInTest"></activity>
-
-
-        <activity android:name="com.facebook.FacebookActivity"
+        <activity android:name=".GoogleSignInTest" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-
-
-            android:label="@string/app_name" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".OrganizationActivity"></activity>
     </application>
 
 </manifest>
