--- a/Android/Android_InvManagement/MyApplication/app/build.gradle
+++ b/Android/Android_InvManagement/MyApplication/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'io.cloudboost:JavaSDK:1.0.7'
 
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
