--- a/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:screenOrientation="portrait" />
+            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
         <activity android:name=".OrganizationActivity"></activity>
     </application>
 
