--- a/Android/Android_InvManagement/MyApplication/app/build.gradle
+++ b/Android/Android_InvManagement/MyApplication/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'io.cloudboost:JavaSDK:1.0.7'
     //Sign in with google
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.google.android.gms:play-services-cast:7.5.0'
     //Sign in with facebook
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
